Thu Oct 23 11:41:15 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * htdig/Retriever.[h,cc]: removed 'head_before_get' overriding by
      restoring the code before Oct 21.
    * htdig/Document.[h,cc]: ditto, with the exception of detaching the HEAD
      before GET mechanism from the persistent connections'.
    * htcommon/defaults.cc: improved documentation (even though it needs
      corrections by an english-speaking developer).
    * These changes fix bug #828628

Fri Oct 17 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htsearch/parser.cc: Applied Neal's patch to fix bug #823403
      Documents only added to search list if they were successfully dug.
      Lines 237-238 of htsearch/Display.cc
        if (!ref || ref->DocState() != Reference_normal)
	    continue;
      should now be redundant.  (Left in to be defensive.)

Tue Oct 21 11:04:56 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * htdig/Retriever.h: added the 'RetrieverType' enum and an object variable
      for storing the type of dig we are performing (default initial);
    * htdig/Retriever.cc: changed constructor in order to handle the type,
      added some debugging explanation regarding the override of the
      'head_before_get' attribute, added checks regarding an empty
      database of URLs to be updated (set the type to initial).
    * htdig/Document.h: added the attribute 'is_initial' which stores the
      information regarding the type of indexing (initial or incremental)
      we are currently performing. Added access methods (get-and-set-like)
    * htdig/Document.cc: modified the logic of the HeadBeforeGet settings during
      the retrieval phase, in order to always override user's settings in
      an incremental dig and automatically set the 'HEAD' call in this case.
    * htcommon/defaults.cc: modified the default value of 'head_before_get' and a bit
      of its explanation.